# capstone_tester_tool

./: README.md
biochar-brazil/: Dockerfile  README.md  pyproject.toml  requirements.txt
biochar-brazil/.github/workflows/: ci.yml
biochar-brazil/configs/: config.yaml  default.yaml  logging.yaml
biochar-brazil/data/: raw
biochar-brazil/docs/: architecture.md  functional_flow.md
biochar-brazil/notebooks/: 01-data-exploration.ipynb  02-modeling-workflow.ipynb
biochar-brazil/scripts/: fetch_data.sh  run_pipeline.sh
biochar-brazil/src/: cli.py  config.py  main.py
biochar-brazil/src/analysis/: aggregation.py  risk_assessment.py  suitability.py  thresholds
biochar-brazil/src/data/: downloader.py  loader.py  preprocessing.py
biochar-brazil/src/models/: ml_model.py  spatial_model.py
biochar-brazil/src/utils/: geospatial.py  io.py
biochar-brazil/src/visualization/: map_renderer.py  plots.py
biochar-brazil/tests/: test_data_loader.py  test_suitability.py
