[tool]
name = "biochar-brazil"
version = "0.1.0"
description = "A geospatial tool for identifying high-potential areas for biochar application across Brazil."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
pandas = "^1.5.0"
numpy = "^1.23.0"
scikit-learn = "^1.1.0"
geopandas = "^0.10.0"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
pydeck = "^0.7.1"
requests = "^2.28.0"
pyyaml = "^6.0"

[dev-dependencies]
pytest = "^7.0.0"
black = "^22.3.0"
flake8 = "^4.0.0"
mypy = "^0.910"